# python_project_generator

./: README.md  create_new_project.sh
template_project/: README.md  pyproject.toml  setup.py
